--- a/BulgariaTimeLine/BulgariaTimeLine.csproj
+++ b/BulgariaTimeLine/BulgariaTimeLine.csproj
@@ -69,6 +69,9 @@
 	  <MauiXaml Update="Views\HomePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\OngalaFightPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
