Added an adminpanel for accounts management, and improved design in HomePage

--- a/BulgariaTimeLine/BulgariaTimeLine.csproj
+++ b/BulgariaTimeLine/BulgariaTimeLine.csproj
@@ -66,6 +66,9 @@
 	  <MauiXaml Update="RegisterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\AdminPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\HomePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
