The app will get Events information from the database

--- a/BulgariaTimeLine/BulgariaTimeLine.csproj
+++ b/BulgariaTimeLine/BulgariaTimeLine.csproj
@@ -78,6 +78,12 @@
 	  <MauiXaml Update="Views\ConstantinopoleSiege.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\EditorPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\EventView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\HomePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
