--- a/BulgariaTimeLine/BulgariaTimeLine.csproj
+++ b/BulgariaTimeLine/BulgariaTimeLine.csproj
@@ -60,6 +60,7 @@
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
 	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	  <PackageReference Include="Xam.Plugin.Media" Version="6.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
